--- a/jjtproject/templates/base.html
+++ b/jjtproject/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>{% block title %}My Exam System{% endblock %}</title>
+  <title>{% block title %}My Exam Systems test{% endblock %}</title>
   <style>
     body {
       font-family: Arial, sans-serif;
